routing all working

--- a/TechTest.Gateway/Properties/launchSettings.json
+++ b/TechTest.Gateway/Properties/launchSettings.json
@@ -42,7 +42,7 @@
     "Gateway": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
