--- a/TechTest.SettingsService/appsettings.json
+++ b/TechTest.SettingsService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "RabbitMQ": {
-    "Host": "rabbitmq://localhost",
+    "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
   }
