--- a/TechTest.SettingsService/Properties/launchSettings.json
+++ b/TechTest.SettingsService/Properties/launchSettings.json
@@ -39,7 +39,7 @@
     "SettingsService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
