--- a/TechTest.UserService/Properties/launchSettings.json
+++ b/TechTest.UserService/Properties/launchSettings.json
@@ -39,7 +39,7 @@
     "UserService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
